--- a/src/main/resources/templates/views/board/boarddetail.html
+++ b/src/main/resources/templates/views/board/boarddetail.html
@@ -19,9 +19,8 @@
     <div class="post-container">
         <div class="post-header">
             <div class="user-info">
-                <img th:src="@{${post?.user.profileImage != null and post?.user.profileImage.startsWith('/') ? 
-                user.profileImage : 
-                (post?.user.profileImage != null ? '/images/' + post?.user.profileImage : '/static/images/default-profile.png')}}" class="profile-image" alt="프로필 이미지">
+                <img th:src="${post?.user.profileImage != null ? post.user.profileImage : '/static/images/default-profile.png'}" 
+                     class="profile-image" alt="프로필 이미지">
                 <span class="username" th:text="${post?.user?.nickname}">사용자명</span>
             </div>
             <div class="post-date" th:text="${#dates.format(post?.createdAt, 'yyyy.MM.dd HH:mm')}">작성일</div>
