--- a/src/main/resources/templates/views/mypage/mypageBadge.html
+++ b/src/main/resources/templates/views/mypage/mypageBadge.html
@@ -23,7 +23,7 @@
 	<div class="badge-container">
 		<div class="badge" th:each="badge : ${badgeList}" 
 			 th:class="${badge.isAchieved == 1 ? 'badge-item' : 'badge-item not-achieved'}">
-			<img th:src="@{'/static/images/' + ${badge.badgeImages}}" class="badge-image">
+			<img th:src="@{'/images/' + ${badge.badgeImages}}" class="badge-image">
 			<div class="badge-name" th:text="${badge.badgeName}"></div>
 			<div class="badge-content" th:text="${badge.badgeContents}"></div>
 			<div class="progress-container" th:if="${badge.isAchieved != 1}">
